Fix SynchronousLoaderClient class for !USE(CFNETWORK) platforms https://bugs.webkit.org/show_bug.cgi?id=120532

Reviewed by Darin Adler.

* CMakeLists.txt:
* PlatformEfl.cmake:
* PlatformGTK.cmake:
* WebCore.vcxproj/WebCore.vcxproj:
* WebCore.vcxproj/WebCore.vcxproj.filters:
* platform/network/SynchronousLoaderClient.cpp:
* platform/network/cf/SynchronousLoaderClientCFNet.cpp: Added.
(WebCore::SynchronousLoaderClient::didReceiveAuthenticationChallenge):
(WebCore::SynchronousLoaderClient::platformBadResponseError):
* platform/network/soup/SynchronousLoaderClientSoup.cpp: Added.
(WebCore::SynchronousLoaderClient::didReceiveAuthenticationChallenge):
(WebCore::SynchronousLoaderClient::platformBadResponseError):

Canonical link: https://commits.webkit.org/138720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155108 268f45cc-cd09-0410-ab3c-d52691b4dbfc