Source/WebCore/PlatformGTK.cmake
@@ -202,6 +202,7 @@ list(APPEND WebCore_SOURCES
     platform/network/soup/ResourceResponseSoup.cpp
     platform/network/soup/SocketStreamHandleSoup.cpp
     platform/network/soup/SoupURIUtils.cpp
+    platform/network/soup/SynchronousLoaderClientSoup.cpp
 
     platform/PlatformStrategies.cpp
 
